Update index.html git commit -m "first commit"

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
         <legend>Persnol Information</legend> 
 
         Card Type:
-        <input type="radio" name="visa" id="visa"> <label for="visa">visa</label>
-        <input type="radio" name="Master" id="master"> <label for="master">Master</label>
-        <input type="radio" name="America Express" id="express"> <label for="express">American Express</label> 
+        <input type="radio" name="card" id="visa"> <label for="visa">visa</label>
+        <input type="radio" name="card" id="master"> <label for="master">Master</label>
+        <input type="radio" name="card" id="express"> <label for="express">American Express</label> 
         <br>
     <label>Crad Number:
     <input type="text" name="Crad Number" required /></label>
